Fix: Adjust margin spacing

--- a/namaste/src/components/events/Events.module.css
+++ b/namaste/src/components/events/Events.module.css
@@ -5,3 +5,11 @@
 .HeroImage {
   height: 900px;
 }
+
+.EventTitle {
+  margin-top: 75px;
+}
+
+.PhotoGalleryTitle {
+  margin-top: 75px;
+}
